assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600&family=Raleway:wght@300;400;600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,100&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;1,200&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;1,200&family=Poppins&display=swap');

/* colors 
#fff9ec - off white
#c2b697 - goldish / #dad0b9
#1b3d2f - green
#a78f18 - yellow
91c0b7 - blue
#8433e - red
#grey - rgb(168,169,172) 
charcoal - rgba(38, 37, 40, 1)
*/

* {
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    font-family: 'Nunito', sans-serif;
    font-weight: 1,100;
    font-size: 16px;
    height:100%;
    min-height:100%;
    height:auto !important;
    margin: 0 10px 0 10px;
    margin:0 auto;
}

hr {
    border: 1px solid rgb(38, 37, 40);
    width: 30%;
    margin: 0 auto;
    margin-bottom: 20px;
}

h1, h2, h3 {
    font-family: 'Relay', sans-serif;
    font-weight: 200;
    padding: 10px;
    margin-bottom: 20px;
    font-size: 1.5rem;
    /* text-transform: uppercase; */
    font-variant: small-caps;
    text-align: center;
}

h4 {
    margin: 0 0 20px 0;
    font-size: 18px;
}

/* .heading {
    background: #262528;
    color: #fff9ec;
    height: 3em;
    border-top: 2px solid #fff9ec;
    border-bottom: 2px solid #fff9ec;
    clear: both;
    margin: 0 auto;
    position: relative;
} not used */

.intext-link {
    color: #a78f18;
    text-decoration: none;
    font-weight: 800;
}

/* _____header */

#header-container {
    display: flex;
    flex-direction: row;
    float: left;
    background-color: rgb(168,169,172);
    width: 100%;
}

#logo {
    background: url("https://domusmeafinance.co.uk/wp-content/uploads/2019/07/logo-60.png") no-repeat center center;
    height: 60px;
    width: 40%;
    margin-top: 150px;
    margin-right: 2%;
}

#hero-image {
    background: url("../images/pexels-moose-photos-1037912_resized\ for\ site.jpg") no-repeat top center;
    height: 300px;
    width: 70%;
}

#tagline {
    color: #fff9ec;
    height: 30px;
    padding-top: 10px;
    font-size: 16px;
}

/* _____navigation menu */

.longbar {
    background: #262528;
    color: #fff9ec;
    height: 2.5em;
    border-top: 2px solid #fff9ec;
    border-bottom: 2px solid #fff9ec;
    padding: 2px;
    clear: both;
    margin: 0 auto;
    position: relative;
}

.longbar a {
    text-decoration: none;
    color: #fff9ec;
    font-size: 20px;
    font-weight: 400;
    text-align: center;
    padding: 5px;
    margin: 30px;
    font-variant: small-caps;
}

#menu ul {
    width: 100%;
    text-align: center;
    /* margin: 0 auto; */
    margin-top: 8px;
    position: relative; 
}

#menu li {
    display: inline-block;
    text-align: center;
}

.longbar a:hover {
    background-color: #84333e;
}

.active {
    background-color: #a78f18;
}

/* ______footer */

#footer {
    position: sticky;
    bottom: 0;
    /* width: 100%; */
    color: rgb(182,183,186);
    height: 50px;
    padding-top: 10px;
    /* height:100px; */
}

#contact-large {
    display: flex;
    flex-direction: row-reverse;
    clear: both;
}

#contact-small {
    display: none;
}

 #footer-right {
     width: 33%;
     float: right;
     text-align: center;
     margin: 0 auto;
 }

 #footer-left {
    width: 33%;
    float: left;
    text-align: center;
    margin:0 auto; 
}

#footer-center {
    width: 33%;
    text-align: center;
    margin: 0 auto;
}

/* footer social links */

#social-links {
    float: center; 
    margin-top: 2px;
}

#social-links ul {
    display: inline-table;
    list-style-type: none;
}

#social-links li {
    display: inline-block;
}

#social-links a {
    color: rgb(182,183,186);
    padding: 10px;
    margin-top: 5px;
    margin: 20px;
    text-align: center;
}

/* home page */

section {
    padding: 20px; 
    /* position: relative; */
    clear: both;
    /* margin-bottom: 10px; */
}

section p {
    margin: 20px;
    text-align: left;
}

/* about us */
.two-columns {
    column-count: 2;
    text-align: justify;
    column-gap: 20px;
    padding: 10px;
    /* clear: both;
    margin: auto 0; */
}

.two-columns p {
    margin: 0;
    text-align: justify;
}
/* sections with three images */
.im-row {
    display: flex;
    flex-direction: row;
    width: 100%;
    float: left;
    clear: both;
    /* margin-top: 20px; */
    min-height: 300px;
}

.im-outer {
    width: 33%;
    /* background: rgba(38, 37, 40); - color for large screens */
    /* background: rgb(167, 143, 24, 0.6); */ 
    border: 5px solid white;
    padding: 5px;
    clear: both;
    text-align: center;
}

.im-label {
    color: rgb(38, 37, 40);
    /* color: #fff9ec; - color for large screens */
    text-align: center;
    font-size: 20px; 
    font-weight: 400;
    text-decoration: none;
    margin-bottom: 10px;
}

.im-label:hover {
    color: #84333e;
}


/* services section */

.in-row-im {
    height: 250px;
    margin-top: 10px;
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
    /* flex-wrap: nowrap; */
    justify-content: space-around;
    align-items: center;
}

#service-img1 {
    background: url("../images/tierra-mallorca-JXI2Ap8dTNc-unsplash_resize_470x330.jpg") no-repeat center center;
}

#service-img2 {
    background: url("../images/marek-studzinski-ELXxMMSF_L8-unsplash-resized\ for\ site.jpg") no-repeat center center;
    
}

#service-img3 {
    background: url("../images/pexels-adrianna-calvo-17739_resized_470x330.jpg") no-repeat center center;
}

/* .divider {
    height: 40px;
    clear: both;
} */

/* Why us - testimonies section */

#testimony-img1 {
    background: url("../images/pexels-kindel-media-7578931_resized.jpg") no-repeat center center;
}

#testimony-img2 {
    background: url("../images/pexels-mikhail-nilov-7735694_resized.jpg") no-repeat center center;
}

#testimony-img3 {
    background: url("../images/pexels-william-fortunato-resized.jpg") no-repeat center center;
}

.testimony-cont {
    background: rgba(38, 37, 40, 1);
    color: #fff9ec;
    font-style: italic;
    text-align: center;
    max-width: 450px;  
    margin: 0;
}

/* Professional bodies */

.pb-logos {
    height:150px;
    display: flex;
    float: left;
}

/* services page*/

#mortgage-img, #equity-img, #protection-img {
    height: 250px;
    /* overflow: hidden; */
    margin: 20px;
}

#mortgage-img {
    background: url("../images/pexels-pnw-production-7327984_800x500.jpg") no-repeat center center;
}

#equity-img {
    background: url("../images/pexels-tima-miroshnichenko-5699397_800x500.jpg") no-repeat center center;
}

#protection-img {
    background: url("../images/hands-protecting-a-house-picjumbo-com_800x500.jpg") no-repeat center center;
}

#mortgages ul, #protection ul {
    margin-left: 40px;
}

#protection li {
    padding: 0 0 5px 0;
}

li::marker {
    color: #a78f18;
}

/* contact form */

#contact-us {
    margin-bottom: 40px;
    clear: both; 
}

#form-outer {
    background: url("../images/laptop-on-a-round-wooden-table-flat-lay-picjumbo-com_1200x800.jpg") no-repeat center center;
    background-color: rgba(38, 37, 40, 1);
    min-height: 200px;
}

form {
    background-color: rgba(38, 37, 40, 0.8);
    height: 600px;
    /* background-color: #84333e; */
    padding: 20px;
    /* margin: auto 0; */
    /* display: table; */
}
/* form > div {
    margin-bottom: 10px;
} */

.table-row {
    display: table-row;
}

.table-cell {
 width: 500px; 
}


/* #contact-image {
    background: url("../images/pexels-andrew-neel-2312369-resized.jpg") no-repeat right center;
    min-height: 450px;
    margin-right: 20px;
    width: 60%;
    float: left; */
    /* margin: 0 auto; */
    /* border: 5px solid white; */
/* } */


label, input {
    /* display: inline-block; */
    text-align: left;
    line-height: 2em;
    display: table-cell;
}

label {
    /* width: 25%; */
    font-size: 1.2em;
    color: #fff9ec;
    text-align: left;
    padding: 10px 20px 0 10px;
    /* width: 25%; */
}

#radio-buttons label {
    font-size: 1em;
}

/* #first-time-rb {
    width: auto;
} */

input {
    /* border: 2px solid #262528; */
    /* max-width: 600px; */
    /* margin-left: 40px; */
    /* position: relative; */
    border-radius: 5px;
}

/* #form-details input {
    width: 200px;
} */

/* input:active {
    width: auto;   
}

input:focus {
    min-width: 200px;
} */

#input-other {
    width: 300px;
    /* height: 50px; */
    color: #fff9ec;
    font-size: 1.2em;
    resize: both;
    text-align: start;
}

.center {
    text-align: center;
}

#radio-buttons {
    margin-left: 200px;
}

#form-btns {
    display: block;
}

.form-btn {
    margin: 10px;
    padding: 5px 20px 5px 20px;
    font-weight: 700;
    color: #a78f18;
}

#submit-btn:hover {
    color: #fff9ec;
    background-color: #a78f18;
}

#backtotop {
    text-align: center;
    padding: 10px;
}

/* MEDIA QUERIES */

@media screen and (max-width: 700px) {

    .longbar {
        width: 100%;
    }  

    .longbar a {
        margin: 10px;
        font-size: 18px;
    }

    #header-container {
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    #logo {
        background: url("https://domusmeafinance.co.uk/wp-content/uploads/2019/07/logo-60.png") no-repeat center center;
        width: 100%;
        margin: 0 0 5px;
        /* margin-right: 2%; */
    }

    #hero-image {
        background: url("../images/pexels-moose-photos-1037912_resized\ for\ site.jpg") no-repeat top center;
        height: 275px;
        width: 100%;
    }

    #tagline {
        height: 20px;
        padding-top: 5px;
        font-size: 12px;
    }

    section p {
        margin: 10px;
        text-align: justify;
    }

    .im-row {
        display: block;
        clear: both;
    }

    .im-outer {
        width: 100%;
    }

    .two-columns {
        column-count: 1;
        text-align: justify;
        padding: 10px;
    }
    
    #footer {
        /* position: none; */
        height: 120px;
        padding: 3px;
    }

    #contact-large {
        display: none;
    }

    #contact-small {
        display: flex;
        flex-direction: column;
    }

    #footer-left, #footer-right, #footer-center {
        width: 100%;
        margin: 5px;
    }

    #backtotop {
        margin-bottom: 140px;
        text-align: center;
    }

}

